; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ioat/extr_ioat.c_ioat_set_interrupt_coalesce.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ioat/extr_ioat.c_ioat_set_interrupt_coalesce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioat_softc = type { i64, i32, i32 }

@ENODEV = common dso_local global i32 0, align 4
@ERANGE = common dso_local global i32 0, align 4
@IOAT_INTRDELAY_OFFSET = common dso_local global i32 0, align 4
@IOAT_INTRDELAY_US_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ioat_set_interrupt_coalesce(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.ioat_softc*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.ioat_softc* @to_ioat_softc(i32 %7)
  store %struct.ioat_softc* %8, %struct.ioat_softc** %6, align 8
  %9 = load %struct.ioat_softc*, %struct.ioat_softc** %6, align 8
  %10 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* @ENODEV, align 4
  store i32 %14, i32* %3, align 4
  br label %35

15:                                               ; preds = %2
  %16 = load i64, i64* %5, align 8
  %17 = load %struct.ioat_softc*, %struct.ioat_softc** %6, align 8
  %18 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp sgt i64 %16, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i32, i32* @ERANGE, align 4
  store i32 %22, i32* %3, align 4
  br label %35

23:                                               ; preds = %15
  %24 = load %struct.ioat_softc*, %struct.ioat_softc** %6, align 8
  %25 = load i32, i32* @IOAT_INTRDELAY_OFFSET, align 4
  %26 = load i64, i64* %5, align 8
  %27 = call i32 @ioat_write_2(%struct.ioat_softc* %24, i32 %25, i64 %26)
  %28 = load %struct.ioat_softc*, %struct.ioat_softc** %6, align 8
  %29 = load i32, i32* @IOAT_INTRDELAY_OFFSET, align 4
  %30 = call i32 @ioat_read_2(%struct.ioat_softc* %28, i32 %29)
  %31 = load i32, i32* @IOAT_INTRDELAY_US_MASK, align 4
  %32 = and i32 %30, %31
  %33 = load %struct.ioat_softc*, %struct.ioat_softc** %6, align 8
  %34 = getelementptr inbounds %struct.ioat_softc, %struct.ioat_softc* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 8
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %23, %21, %13
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local %struct.ioat_softc* @to_ioat_softc(i32) #1

declare dso_local i32 @ioat_write_2(%struct.ioat_softc*, i32, i64) #1

declare dso_local i32 @ioat_read_2(%struct.ioat_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
